syntax = "proto3";

package proto;

option go_package = "pb";

import "processor_message.proto";
import "memory_message.proto";
import "storage_message.proto";
import "keyboard_message.proto";
import "screen_message.proto";

message Laptop {
    string id = 1;
    string brand = 2;
    string name = 3;
    CPU cpu = 4;
    Memory ram = 5;
    repeated GPU gpus = 6;
    repeated Storage storages = 7;
    Screen screen = 8;
    Keyboard keyboard = 9;
    oneof weight {
        double wight_kg = 10;
        double wight_lb = 11;
    }
    double price_usd = 12;
    uint32 release_year = 13;
    int64 updated_at = 14;
}